--- a/CSS/style.css
+++ b/CSS/style.css
@@ -72,9 +72,11 @@
     background: linear-gradient(0.00deg, rgb(7, 2, 17),rgba(7, 2, 17, 0) 100%),
     url('/images/Vectorrr.png');
     background-repeat: no-repeat;
+    background-position: center;
     margin: 100px auto;
     width: 1340px;
     height: 600px;
+    border-radius: 8px;
 }
 .midbox{
     display: flex;
@@ -115,4 +117,57 @@
 .midbox-img img{
     height: 100%;
     width: 100%;
+}
+/*  */
+.join-now-section{
+    background: linear-gradient(180.00deg, rgba(255, 0, 0, 0.1),rgba(255, 0, 0, 0) 100%);
+    width: 1340px;
+    height: 400px;
+    margin: 50px auto !important;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+}
+.details-box{
+    margin:0 auto;
+    vertical-align: middle;
+    text-align: center;
+}
+.details-title-1{
+  font-weight: 700;
+  font-size:28px;
+  color:rgb(7, 2, 17);
+}
+.details-title-2{
+    font-weight: 700;
+    font-size:28px;
+    color:rgb(7, 2, 17);
+  }
+.details-title-3{
+    font-weight: 700;
+    font-size:32px;
+    color:rgb(7, 2, 17);
+  }
+.details-title-1 span, .details-box-2 span, .details-title-3 span {
+    color:rgb(255, 0, 0);
+}
+.join-btn-hotel-details{
+    color:white;
+    padding:20px 60px;
+    border-radius: 8px;
+    border:none;
+    font-size: 20px;
+    font-weight: 800;
+    background-color:rgb(255, 0, 0);
+    margin-top: 48px;
+}
+/*  */
+
+.comming-soon-division{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    width: 1340px;
+    margin:50px auto;
 }
