--- a/CSS/style.css
+++ b/CSS/style.css
@@ -264,3 +264,43 @@
     position:absolute;
     bottom: 0;
 }
+/*  */
+.port-section{
+    width:1340px;
+    margin: 0 auto;
+}
+.grid-system{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 30px;
+}
+.grid-system img{
+    width:300px;
+    height: 300px;
+}
+.port-details{
+   width: 500px;
+}
+.port-details h3{
+    color: rgb(255, 0, 0);
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 28px;
+}
+.port-details h2{
+    color: rgb(7, 2, 17);
+    font-size: 40px;
+    font-weight: bolder;
+    line-height: 40px;
+}
+.port-details p{
+    font-size:18px;
+    font-weight: 500;
+    line-height: 24px;
+    margin-top:10px;
+    color: rgba(7, 2, 17, 0.6);
+}
+.gid-container{
+    margin: 50px 0;
+}
